--- a/main.html
+++ b/main.html
@@ -2,12 +2,28 @@
 
 <html>
 
+	
 <head>
+	<title>CSS Pseudo Classes</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+    <article>
+		<p>First Paragraph</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, numquam, illum sint odio eius enim asperiores dolor
+		<br><br>commodi magnam maxime repudiandae ut, quaerat porro corrupti adipisci repellat. Neque illo sunt, unde magni </p>
+		<p> officia deleniti reiciendis voluptates nam facere? Libero repudiandae ad perferendis sunt cumque animi temporaiste</p>
+</article>
+
+	<ul>
+		<li>First Item</li>
+		<li>second itemp</li>
+		<li>Third item</li>
+		<li>Fourth item</li>
+		<li>Fifth item</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
